# string_proc

./: CMakeLists.txt  File.txt  Makefile  Output.txt  run.out  task.cpp
